// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toHaveBeenCalledBefore failIfNoSecondInvocation is passed as false fails when given first mock that has been called and a second mock that has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to not have been called before, invocationCallOrder:
  <green>[31]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.not.toHaveBeenCalledBefore fails when given first mock is called before multiple calls to second mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to not have been called before, invocationCallOrder:
  <green>[4000, 6000]</color>
Received second mock with invocationCallOrder:
  <red>[5000, 7000, 8000]</color>"
`;

exports[`.not.toHaveBeenCalledBefore fails when given first mock is called before second mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to not have been called before, invocationCallOrder:
  <green>[4000]</color>
Received second mock with invocationCallOrder:
  <red>[5000]</color>"
`;

exports[`.toHaveBeenCalledBefore failIfNoSecondInvocation is passed as true fails when given first mock that has been called and a second mock that has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called before, invocationCallOrder:
  <green>[16]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.toHaveBeenCalledBefore fails when given a first mock has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called before, invocationCallOrder:
  <green>[]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.toHaveBeenCalledBefore fails when given first mock is called after second mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called before, invocationCallOrder:
  <green>[5000]</color>
Received second mock with invocationCallOrder:
  <red>[4000]</color>"
`;

exports[`.toHaveBeenCalledBefore fails when given first mock is called after several calls to second mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called before, invocationCallOrder:
  <green>[5000, 6000, 7000]</color>
Received second mock with invocationCallOrder:
  <red>[4000]</color>"
`;

exports[`.toHaveBeenCalledBefore fails when given first mock that has been called and a second mock that has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called before, invocationCallOrder:
  <green>[1]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.toHaveBeenCalledBefore fails when given first value is not a jest spy or mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Matcher error: <red>"received"</color> must be a mock or spy function

Received has type:  function
Received has value: <red>[Function mock1]</color>"
`;

exports[`.toHaveBeenCalledBefore fails when given second value is not a jest spy or mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledBefore(</intensity><green>expected</color><dim>)</intensity>

Matcher error: <green>"expected"</color> must be a mock or spy function

Expected has type:  function
Expected has value: <green>[Function mock2]</color>"
`;
